fixed flickering on tap and tapping on circles in palette now trigger white border on touchscreen devices

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -114,7 +114,7 @@ body {
 	border-color: black;
 }
 
-.circle:hover {
+.circle:hover, .circle:focus {
 	border-style: solid;
 	border-width: 6px;
 	border-color: white;
@@ -289,6 +289,10 @@ h3 {
 }
 
 @media only screen and (min-width: 536px) and (max-width: 650px) {
+	div {
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+	}
+
 	.box {
 		height: 22px;
 		width: 22px;
@@ -336,6 +340,10 @@ h3 {
 }
 
 @media only screen and (min-width: 415px) and (max-width: 535px) {
+	div {
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+	}
+
 	.box {
 		height: 18px;
 		width: 18px;
@@ -455,6 +463,7 @@ h3 {
 	div {
 		-webkit-tap-highlight-color: rgba(0,0,0,0);
 	}
+
 	.box {
 		height: 15px;
 		width: 15px;
@@ -565,6 +574,10 @@ h3 {
 }
 
 @media only screen and (max-width: 320px) {
+	div {
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+	}
+
 	.box {
 		height: 14px;
 		width: 14px;
